<resources>
    <string name="app_name">PostIt</string>

    <string name="settings_string">Choose social networks:</string>
    <string name="vk">ВКонтакте</string>
    <string name="ok">Одноклассники</string>
    <string name="fb">Facebook</string>
    <string name="insta">Instagram</string>

    <string name="post_string">MAKE YOUR POST HERE:</string>
    <string name="post">POST</string>

    <string name="during_post">Posting is performing</string>

    <string name="status_logged_in">You are logged in</string>
    <string name="status_not_logged_in">You are not logged in</string>
    <string name="status_wrong">Sorry, but something went wrong</string>
    <string name="status_no_internet">Check your internet access</string>
    <string name="status_posted">Posted!</string>
    <string name="status_performing">Performing..</string>

    <string name="facebook_app_id">388614831486686</string>

    <string name="draft_string">DRAFT</string>
</resources>
