<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_string" />

    <Switch
        android:id="@+id/vk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/section_label"
        android:text="@string/vk"
        android:layout_toEndOf="@+id/imageView3" />

    <Switch
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/vk"
        android:text="@string/ok"
        android:layout_toEndOf="@+id/imageView3" />

    <Switch
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ok"
        android:text="@string/fb"
        android:layout_toEndOf="@+id/imageView4" />

    <Switch
        android:id="@+id/insta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fb"
        android:text="@string/insta" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="bottom"
        android:background="?android:attr/selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_logout"
        android:tint="#ff0000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_vk"
        android:id="@+id/imageView3"
        android:layout_above="@+id/ok"
        android:layout_below="@+id/section_label"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_ok"
        android:layout_above="@+id/fb"
        android:id="@+id/imageView4"
        android:layout_below="@+id/vk"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_fb"
        android:layout_above="@+id/insta"
        android:id="@+id/imageView5"
        android:layout_below="@+id/ok"
        android:layout_alignParentStart="true" />

</RelativeLayout>